name:                DBPnet
version:             0.1.2
synopsis:            Inferring cooperation of DNA binding proteins in 3D genome.
description:         Inferring cooperation of DNA binding proteins in 3D genome.
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015-2016 Kai Zhang
category:            Bio
build-type:          Simple

extra-source-files:
  ChangeLog.md
  README.md
  stack.yaml

cabal-version:       >=1.10

executable DBPnet
  main-is:             Main.hs
  other-modules:
    Paths_DBPnet
    DBPnet.ReadCount
    DBPnet.Correlation
    DBPnet.Network
    DBPnet.Type
    DBPnet.Utils
    DBPnet.Constants

  build-depends:
      base >=4.8 && <5.0
    , aeson
    , bioinformatics-toolkit >=0.2.2
    , bytestring
    , conduit-extra
    , conduit-combinators
    , cryptohash
    , data-default
    , double-conversion
    , glasso
    , lens
    , matrices >=0.4.3
    , mmorph
    , optparse-applicative
    , resourcet
    , shelly
    , statistics >=0.13.3.0
    , split
    , text
    , transformers-base
    , unordered-containers
    , vector
    , yaml

  hs-source-dirs:      src
  default-language:    Haskell2010
